--- a/solution.ipynb
+++ b/solution.ipynb
@@ -30,7 +30,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 02 - Getting Data"
+    "## 02 - Getting Data\n",
+    "### Read the .csv file\n",
+    "#### Read the .csv file"
    ]
   },
   {
@@ -38,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Read the .csv file"
+    "### Read the .csv file"
    ]
   },
   {
@@ -82,7 +84,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Initial clean (Change headers names)"
+    "### Initial clean (Change headers names)"
    ]
   },
   {
@@ -101,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Deal with NaN values."
+    "### Deal with NaN values."
    ]
   },
   {
@@ -146,7 +148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Categorical Features & Numerical Features."
+    "### Categorical Features & Numerical Features."
    ]
   },
   {
@@ -164,7 +166,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exploration "
+    "### Exploration "
    ]
   },
   {
@@ -926,7 +928,7 @@
     "\n",
     "## 04 - Processing Data\n",
     "\n",
-    "# Dealing with outliers."
+    "### Dealing with outliers."
    ]
   },
   {
@@ -988,7 +990,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Normalization \n",
+    "### Normalization \n",
     "No significant difference of correlation between the numerical columns. Let's try normalizing the data."
    ]
   },
@@ -1201,7 +1203,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Encoding Categorical Data."
+    "### Encoding Categorical Data."
    ]
   },
   {
@@ -1225,7 +1227,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Splitting into train set and test set."
+    "### Splitting into train set and test set."
    ]
   },
   {
@@ -1250,7 +1252,7 @@
    "metadata": {},
    "source": [
     "## 05 - Modeling\n",
-    "#  Apply model "
+    "###  Apply model "
    ]
   },
   {
@@ -1275,7 +1277,7 @@
    "metadata": {},
    "source": [
     "## 06 - Model Validation\n",
-    "# Evaluate the model with R2, RMSE, MAE, MSE scores "
+    "### Evaluate the model with R2, RMSE, MAE, MSE scores "
    ]
   },
   {
