--- a/solution.ipynb
+++ b/solution.ipynb
@@ -30,9 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 02 - Getting Data\n",
-    "### Read the .csv file\n",
-    "#### Read the .csv file"
+    "## 02 - Getting Data"
    ]
   },
   {
