--- a/solution.ipynb
+++ b/solution.ipynb
@@ -1017,7 +1017,7 @@
     "from sklearn.preprocessing import QuantileTransformer\n",
     "quantilenumerical2 = QuantileTransformer(output_distribution='uniform').fit_transform(numerical2) # Apply the quantile transformation to the numerical columns\n",
     "\n",
-    "# Let's check and compare the new scales of the numerical columns, using \"income\" as an example. \n",
+    "# Let's check and compare the new scales of the numerical columns, using \"customer_lifetime_value\" as an example. \n",
     "fig, ax = plt.subplots(1, 4, figsize=(10, 5))\n",
     "ax[0].set_title(\"Original\")\n",
     "sns.histplot(data=numerical2, x=numerical2[\"customer_lifetime_value\"], ax=ax[0])\n",
@@ -1038,7 +1038,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The quantile transformation seems to have smoothed the distributions "
+    "The quantile transformation seems to have uniformed the distributions the most"
    ]
   },
   {
