--- a/solution.ipynb
+++ b/solution.ipynb
@@ -1113,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1123,9 +1123,9 @@
     "y = MinMaxscaledropped['total_claim_amount']\n",
     "X = MinMaxscaledropped.drop(['total_claim_amount'], axis=1)\n",
     "# Split the data into train and test sets \n",
-    "# The test is 20% of the data and the random state is set to 42 \n",
+    "# The test is 20% (or 30%) of the data and the random state is set to 42 \n",
     "from sklearn.model_selection import train_test_split \n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n"
    ]
   },
   {
@@ -1139,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1164,21 +1164,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2 train = 0.3998587118398139\n",
-      "R2 test = 0.38491503975108043\n",
-      "RMSE train = 0.06881342039066939\n",
-      "RMSE test = 0.062410189584576045\n",
-      "MAE train = 0.04795461849537047\n",
-      "MAE test = 0.04602034856496201\n",
-      "MSE train = 0.0047352868258629935\n",
-      "MSE test = 0.0038950317639827245\n"
+      "R2 train = 0.3856297708387265\n",
+      "R2 test = 0.4247370411385677\n",
+      "RMSE train = 0.06890583370602098\n",
+      "RMSE test = 0.0645264387428927\n",
+      "MAE train = 0.04805649412035099\n",
+      "MAE test = 0.04744447491776384\n",
+      "MSE train = 0.004748013918721817\n",
+      "MSE test = 0.004163661296840284\n"
      ]
     }
    ],
@@ -1209,7 +1209,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The scoring that came from the MinMaxScaler is better than the one that came from the StandardScaler."
+    "The scoring that came from the MinMaxScaler is better than the one that came from the StandardScaler.\n",
+    "Using a 30% test size. "
    ]
   },
   {
