--- a/solution.ipynb
+++ b/solution.ipynb
@@ -970,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -984,6 +984,71 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's drop the columns that are not relevant for the model by checking the correlation matrix with columns that have a correlation of under 0.1\n",
+    "numericaldropped = numerical2.drop(columns=['number_of_open_complaints', 'number_of_policies', 'months_since_last_claim', 'months_since_policy_inception'])\n",
+    "# This also keeps the columns that are the most linear to the target column ('total_claim_amount')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Encoding Categorical Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# One Hot Encoding technique\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "transformOneHot = OneHotEncoder(drop=\"first\") # Drop the first column to avoid multicollinearity (dummy variable trap)\n",
+    "categoricalsOneHot = pd.DataFrame(transformOneHot.fit_transform(categoricals2).toarray())\n",
+    "\n",
+    "# Label Encoding technique\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "transformLabel = categoricals2.apply(LabelEncoder().fit_transform)\n",
+    "\n",
+    "# Concatenate the encoded columns with numerical columns\n",
+    "dataNumEncoded = pd.concat([numerical2, categoricalsOneHot], axis=1)\n",
+    "\n",
+    "# At this stage, we will not use the Encoding technique because it is not necessary for the Linear Regression model."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Splitting into train set and test sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Time for Linear Regression for the numerical values \n",
+    "\n",
+    "# Separate the target variable from the rest of the data\n",
+    "y = numericaldropped['total_claim_amount']\n",
+    "X = numericaldropped.drop(['total_claim_amount'], axis=1)\n",
+    "# Split the data into train and test sets \n",
+    "# The test is 20% (or 30%) of the data and the random state is set to 42 \n",
+    "from sklearn.model_selection import train_test_split \n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -993,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -1009,13 +1074,13 @@
    ],
    "source": [
     "# Log transformation of the numerical columns \n",
-    "lognumerical2 = numerical2.apply(np.log) # Apply the log transformation to the numerical columns\n",
+    "lognumerical2 = numericaldropped.apply(np.log) # Apply the log transformation to the numerical columns\n",
     "# Power transformation of the numerical columns (Yeo-Johnson)\n",
     "from sklearn.preprocessing import PowerTransformer\n",
-    "powernumerical2 = PowerTransformer(method='yeo-johnson').fit_transform(numerical2) # Apply the power transformation to the numerical columns\n",
+    "powernumerical2 = PowerTransformer(method='yeo-johnson').fit_transform(numericaldropped) # Apply the power transformation to the numerical columns\n",
     "# Quantile transformation of the numerical columns (Uniform)\n",
     "from sklearn.preprocessing import QuantileTransformer\n",
-    "quantilenumerical2 = QuantileTransformer(output_distribution='uniform').fit_transform(numerical2) # Apply the quantile transformation to the numerical columns\n",
+    "quantilenumerical2 = QuantileTransformer(output_distribution='uniform').fit_transform(numericaldropped) # Apply the quantile transformation to the numerical columns\n",
     "\n",
     "# Let's check and compare the new scales of the numerical columns, using \"customer_lifetime_value\" as an example. \n",
     "fig, ax = plt.subplots(1, 5, figsize=(10, 5))\n",
@@ -1049,85 +1114,24 @@
    "metadata": {},
    "source": [
     "### Normalization \n",
-    "Let's try normalizing the data to help scale the values "
+    "Let's try normalizing the data to help scale the values for the model "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Normalize (numerical) with MinMaxScaler\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
+    "# Define the scalers\n",
     "transformMinMax = MinMaxScaler()\n",
-    "MinMaxscale = pd.DataFrame(transformMinMax.fit_transform(numerical2), columns=numerical2.columns)\n",
-    "\n",
-    "# Normalize (numerical) with StandardScaler\n",
-    "from sklearn.preprocessing import StandardScaler\n",
     "transformStandard = StandardScaler()\n",
-    "Normalizescale = pd.DataFrame(transformStandard.fit_transform(numerical2), columns=numerical2.columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Let's drop the columns that are not relevant for the model using the correlation matrix with columns that have a correlation of under 0.1\n",
-    "MinMaxscaledropped = MinMaxscale.drop(columns=['number_of_open_complaints', 'number_of_policies', 'months_since_last_claim', 'months_since_policy_inception'])\n",
-    "Normalizescaledropped = Normalizescale.drop(columns=['number_of_open_complaints', 'number_of_policies', 'months_since_last_claim', 'months_since_policy_inception'])\n",
-    "# This also keeps the columns that are the most linear to the target column ('total_claim_amount')"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Encoding Categorical Data."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# One Hot Encoding technique\n",
-    "from sklearn.preprocessing import OneHotEncoder\n",
-    "transformOneHot = OneHotEncoder(drop=\"first\") # Drop the first column to avoid multicollinearity (dummy variable trap)\n",
-    "categoricalsOneHot = pd.DataFrame(transformOneHot.fit_transform(categoricals2).toarray())\n",
     "\n",
-    "# Label Encoding technique\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "transformLabel = categoricals2.apply(LabelEncoder().fit_transform)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Splitting into train set and test set."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Time for Linear Regression for the numerical values \n",
-    "\n",
-    "# Separate the target variable from the rest of the data\n",
-    "y = MinMaxscaledropped['total_claim_amount']\n",
-    "X = MinMaxscaledropped.drop(['total_claim_amount'], axis=1)\n",
-    "# Split the data into train and test sets \n",
-    "# The test is 20% (or 30%) of the data and the random state is set to 42 \n",
-    "from sklearn.model_selection import train_test_split \n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n"
+    "# Transform the data using the scalers\n",
+    "# Normalize (numerical) with MinMaxScaler\n",
+    "MinMaxscale = pd.DataFrame(transformMinMax.fit_transform(X_train), columns=X_train.columns)\n",
+    "# Normalize (numerical) with StandardScaler\n",
+    "Normalizescale = pd.DataFrame(transformStandard.fit_transform(X_train), columns=X_train.columns)"
    ]
   },
   {
@@ -1141,18 +1145,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 125,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\user\\anaconda3\\lib\\site-packages\\sklearn\\base.py:450: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\user\\anaconda3\\lib\\site-packages\\sklearn\\base.py:450: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\user\\anaconda3\\lib\\site-packages\\sklearn\\base.py:450: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\user\\anaconda3\\lib\\site-packages\\sklearn\\base.py:450: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
-    "# Create the model\n",
+    "# Create the models\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "model = LinearRegression()\n",
-    "model.fit(X_train, y_train) # Fit the model \n",
+    "model1 = LinearRegression()\n",
+    "model2 = LinearRegression()\n",
+    "\n",
+    "# Fit the models\n",
+    "model1.fit(MinMaxscale, y_train)\n",
+    "model2.fit(Normalizescale, y_train)\n",
     "\n",
     "# Check the predictions\n",
-    "y_predictions_train = model.predict(X_train) # Predict the target variable for the train set\n",
-    "y_predictions_test = model.predict(X_test) # Predict the target variable for the test set"
+    "# Predict the target variable for the train and test sets\n",
+    "y_predictions_train1 = model1.predict(transformMinMax.transform(X_train))\n",
+    "y_predictions_test1 = model1.predict(transformMinMax.transform(X_test))\n",
+    "y_predictions_train2 = model2.predict(transformStandard.transform(X_train))\n",
+    "y_predictions_test2 = model2.predict(transformStandard.transform(X_test))"
    ]
   },
   {
@@ -1166,35 +1192,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2 train = 0.2613942093414007\n",
-      "R2 test = 0.30102677138529355\n",
-      "RMSE train = 0.24643369099643503\n",
-      "RMSE test = 0.24558626432090416\n",
-      "MAE train = 0.20012185394863538\n",
-      "MAE test = 0.20264786801393142\n",
-      "MSE train = 0.06072956405812643\n",
-      "MSE test = 0.060312613223097\n"
+      "Evaluation metrics for MinMaxScaler:\n",
+      "R2 train = 0.3998587118398139\n",
+      "R2 test = 0.38491503975108043\n",
+      "RMSE train = 199.0580898983314\n",
+      "RMSE test = 180.5353237547098\n",
+      "MAE train = 138.71937632656864\n",
+      "MAE test = 133.1240712900079\n",
+      "MSE train = 39624.123153972185\n",
+      "MSE test = 32593.003123217877\n",
+      "\n",
+      "Evaluation metrics for StandardScaler:\n",
+      "R2 train = 0.3998587118398138\n",
+      "R2 test = 0.38491503975108043\n",
+      "RMSE train = 199.05808989833142\n",
+      "RMSE test = 180.5353237547098\n",
+      "MAE train = 138.71937632656866\n",
+      "MAE test = 133.12407129000786\n",
+      "MSE train = 39624.12315397219\n",
+      "MSE test = 32593.003123217877\n"
      ]
     }
    ],
    "source": [
     "from sklearn.metrics import r2_score, mean_squared_error, mean_absolute_error\n",
     "import sklearn.metrics as metrics\n",
-    "print('R2 train =', r2_score(y_train, y_predictions_train))\n",
-    "print('R2 test =', r2_score(y_test, y_predictions_test))\n",
-    "print('RMSE train =', np.sqrt(mean_squared_error(y_train, y_predictions_train)))\n",
-    "print('RMSE test =', np.sqrt(mean_squared_error(y_test, y_predictions_test)))\n",
-    "print('MAE train =', metrics.mean_absolute_error(y_train, y_predictions_train))\n",
-    "print('MAE test =', metrics.mean_absolute_error(y_test, y_predictions_test))\n",
-    "print('MSE train =', metrics.mean_squared_error(y_train, y_predictions_train))\n",
-    "print('MSE test =', metrics.mean_squared_error(y_test, y_predictions_test))\n",
+    "# Print the evaluation metrics\n",
+    "print(\"Evaluation metrics for MinMaxScaler:\")\n",
+    "print(\"R2 train =\", r2_score(y_train, y_predictions_train1))\n",
+    "print(\"R2 test =\", r2_score(y_test, y_predictions_test1))\n",
+    "print(\"RMSE train =\", np.sqrt(mean_squared_error(y_train, y_predictions_train1)))\n",
+    "print(\"RMSE test =\", np.sqrt(mean_squared_error(y_test, y_predictions_test1)))\n",
+    "print(\"MAE train =\", mean_absolute_error(y_train, y_predictions_train1))\n",
+    "print(\"MAE test =\", mean_absolute_error(y_test, y_predictions_test1))\n",
+    "print(\"MSE train =\", mean_squared_error(y_train, y_predictions_train1))\n",
+    "print(\"MSE test =\", mean_squared_error(y_test, y_predictions_test1))\n",
+    "\n",
+    "print(\"\\nEvaluation metrics for StandardScaler:\")\n",
+    "print(\"R2 train =\", r2_score(y_train, y_predictions_train2))\n",
+    "print(\"R2 test =\", r2_score(y_test, y_predictions_test2))\n",
+    "print(\"RMSE train =\", np.sqrt(mean_squared_error(y_train, y_predictions_train2)))\n",
+    "print(\"RMSE test =\", np.sqrt(mean_squared_error(y_test, y_predictions_test2)))\n",
+    "print(\"MAE train =\", mean_absolute_error(y_train, y_predictions_train2))\n",
+    "print(\"MAE test =\", mean_absolute_error(y_test, y_predictions_test2))\n",
+    "print(\"MSE train =\", mean_squared_error(y_train, y_predictions_train2))\n",
+    "print(\"MSE test =\", mean_squared_error(y_test, y_predictions_test2))\n",
     "\n",
     "# As a reminder, the R2 score is the percentage of the variance in the target variable that is predictable from the data.\n",
     "# it should be as close to 1 as possible.\n",
@@ -1211,8 +1260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The scoring that came from the MinMaxScaler is better than the one that came from the StandardScaler.\n",
-    "Using a 30% test size. "
+    "The scoring that came from the different scalers were very similar, nothing conclusive"
    ]
   },
   {
