--- a/solution.ipynb
+++ b/solution.ipynb
@@ -74,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 03 - Cleaning/Wrangling/EDA"
+    "## 03 - Cleaning/Wrangling"
    ]
   },
   {
