--- a/solution.ipynb
+++ b/solution.ipynb
@@ -1002,7 +1002,9 @@
     "# Most of the histograms are skewed to the right. But the outliers are only significant in the 'income' and 'number_of_open_complaints' columns. So let's drop the outliers in those columns.\n",
     "\n",
     "data = data[data['income'] != 0] # Drop the 0 values in the 'income' column\n",
-    "data = data[data['number_of_open_complaints'] != 0] # Drop the 0 values in the 'number_of_open_complaints' column\n",
+    "data = data[data['number_of_open_complaints'] != 0] # Drop the 0 values in the 'number_of_open_complaints' column \n",
+    "\n",
+    "# We could consider dropping 3*IQR outliers, but we'll leave them for now.\n",
     "\n",
     "numerical2 = data.select_dtypes(include=np.number) # Select numerical columns \n",
     "categoricals2 = data.select_dtypes(include=object) # Select categorical columns"
@@ -1033,6 +1035,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Depending on the type of categorial data, I'll apply One Hot Encoding (if the data is not ordinal) or Label Encoding (if the data is ordinal)\n",
+    "\n",
     "# One Hot Encoding technique\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
     "transformOneHot = OneHotEncoder(drop=\"first\") # Drop the first column to avoid multicollinearity (dummy variable trap)\n",
