update with intro to logistic regression

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -1026,43 +1026,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Encoding Categorical Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Depending on the type of categorial data, I'll apply One Hot Encoding (if the data is not ordinal) or Label Encoding (if the data is ordinal)\n",
-    "\n",
-    "# One Hot Encoding technique\n",
-    "from sklearn.preprocessing import OneHotEncoder\n",
-    "transformOneHot = OneHotEncoder(drop=\"first\") # Drop the first column to avoid multicollinearity (dummy variable trap)\n",
-    "categoricalsOneHot = pd.DataFrame(transformOneHot.fit_transform(categoricals2).toarray())\n",
-    "\n",
-    "# Label Encoding technique\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "transformLabel = categoricals2.apply(LabelEncoder().fit_transform)\n",
-    "\n",
-    "# Concatenate the encoded columns with numerical columns\n",
-    "dataNumEncoded = pd.concat([numerical2, categoricalsOneHot], axis=1)\n",
-    "\n",
-    "# At this stage, we will not use the Encoding technique because it is not necessary for the Linear Regression model."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Splitting into train set and test sets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1071,10 +1040,20 @@
     "# Separate the target variable from the rest of the data\n",
     "y = numericaldropped['total_claim_amount']\n",
     "X = numericaldropped.drop(['total_claim_amount'], axis=1)\n",
+    "\n",
     "# Split the data into train and test sets \n",
     "# The test is 20% (or 30%) of the data and the random state is set to 42 \n",
     "from sklearn.model_selection import train_test_split \n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Split numericals and categoricals \n",
+    "X_train_df = pd.DataFrame(X_train, columns=X.columns)\n",
+    "X_test_df  = pd.DataFrame(X_test, columns=X.columns)\n",
+    "\n",
+    "X_train_num = X_train_df.select_dtypes(include = np.number)\n",
+    "X_test_num  = X_test_df.select_dtypes(include = np.number)\n",
+    "X_train_cat = X_train_df.select_dtypes(include = object)\n",
+    "X_test_cat  = X_test_df.select_dtypes(include = object)\n"
    ]
   },
   {
@@ -1094,8 +1073,53 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Encoding Categorical Data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Depending on the type of categorial data, I'll apply One Hot Encoding (if the data is not ordinal) or Label Encoding (if the data is ordinal)\n",
+    "\n",
+    "# One Hot Encoding technique\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "transformOneHot = OneHotEncoder(drop=\"first\") # Drop the first column to avoid multicollinearity (dummy variable trap)\n",
+    "transformOneHot.fit(X_train_cat)\n",
+    "X_train_cat_encoded = transformOneHot.transform(X_train_cat).toarray()\n",
+    "cols = transformOneHot.get_feature_names_out(input_features=X_train_cat.columns)\n",
+    "X_test_cat_encoded = transformOneHot.transform(X_test_cat).toarray()\n",
+    "cols = transformOneHot.get_feature_names_out(input_features=X_test_cat.columns)\n",
+    "\n",
+    "###### Label Encoding technique\n",
+    "# from sklearn.preprocessing import LabelEncoder\n",
+    "# transformLabel = categoricals2.apply(LabelEncoder().fit_transform)\n",
+    "# categoricalsLabel = pd.DataFrame(transformLabel)\n",
+    "\n",
+    "# Make into a dataframe \n",
+    "X_train_encoded_df = pd.DataFrame(X_train_cat_encoded, columns=cols)\n",
+    "X_test_encoded_df = pd.DataFrame(X_test_cat_encoded, columns=cols)\n",
+    "\n",
+    "# At this stage, we will not use the Encoding technique because it is not necessary for the Linear Regression model."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Numerical transformation "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1119,15 +1143,15 @@
     "from sklearn.preprocessing import PowerTransformer\n",
     "powernumerical2 = PowerTransformer(method='yeo-johnson').fit_transform(numerical2) # Apply the power transformation to the numerical columns\n",
     "transformerPower = PowerTransformer(method='yeo-johnson')\n",
-    "X_train_transformedPower = transformerPower.fit_transform(X_train)\n",
-    "X_test_transformedPower = transformerPower.transform(X_test)\n",
+    "X_train_transformedPower = transformerPower.fit_transform(X_train_num)\n",
+    "X_test_transformedPower = transformerPower.transform(X_test_num)\n",
     "\n",
     "# Quantile transformation of the numerical columns (Uniform)\n",
     "from sklearn.preprocessing import QuantileTransformer\n",
     "quantilenumerical2 = QuantileTransformer(output_distribution='uniform').fit_transform(numerical2) # Apply the quantile transformation to the numerical columns\n",
     "transformerQuantile = QuantileTransformer(output_distribution='uniform')\n",
-    "X_train_transformedQuantile = transformerQuantile.fit_transform(X_train)\n",
-    "X_test_transformedQuantile = transformerQuantile.transform(X_test)\n",
+    "X_train_transformedQuantile = transformerQuantile.fit_transform(X_train_num)\n",
+    "X_test_transformedQuantile = transformerQuantile.transform(X_test_num)\n",
     "\n",
     "# Let's check and compare the new scales of the numerical columns, using \"customer_lifetime_value\" as an example. \n",
     "fig, ax = plt.subplots(1, 5, figsize=(10, 5))\n",
@@ -1166,11 +1190,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the scalers\n",
+    "# Define the scalers -> only for the original numerical columns (not the transformed categorial ones)\n",
     "transformMinMax = MinMaxScaler()\n",
     "transformStandard = StandardScaler()\n",
     "\n",
@@ -1181,12 +1205,25 @@
     "transformMinMax = MinMaxScaler()\n",
     "X_train_minmax = transformMinMax.fit_transform(X_train_transformedPower)\n",
     "X_test_minmax = transformMinMax.transform(X_test_transformedPower)\n",
+    "X_train_minmax = pd.DataFrame(X_train_minmax, columns=X_train_num.columns) # Convert the array to a dataframe\n",
+    "X_test_minmax = pd.DataFrame(X_test_minmax, columns=X_test_num.columns) # Convert the array to a dataframe\n",
     "\n",
     "# Normalize (numerical) with StandardScaler\n",
     "# Normalizescale = pd.DataFrame(transformStandard.fit_transform(X_train), columns=X_train.columns)\n",
     "transformStandard = StandardScaler()\n",
     "X_train_standard = transformStandard.fit_transform(X_train_transformedPower)\n",
     "X_test_standard = transformStandard.transform(X_test_transformedPower)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Concatenate the encoded columns (OneHot) with scaled (MinMax) numerical columns\n",
+    "X_train_treated_df = pd.concat((X_train_minmax, X_train_encoded_df), axis=1)\n",
+    "X_test_treated_df = pd.concat((X_test_minmax, X_test_encoded_df), axis=1)"
    ]
   },
   {
@@ -1200,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1217,6 +1254,26 @@
     "y_predictions_test1 = model1.predict(X_test_minmax)\n",
     "y_predictions_train2 = model2.predict(X_train_standard)\n",
     "y_predictions_test2 = model2.predict(X_test_standard)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This part is if we wanted to use Logistic Regression instead of Linear Regression \n",
+    "# (used for binary classification)\n",
+    "\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "classification = LogisticRegression(random_state=0, solver='lbfgs', multi_class='ovr')\n",
+    "classification.fit(X_train_treated_df, y_train)\n",
+    "\n",
+    "y_train_pred = classification.predict(X_train_treated_df)\n",
+    "y_test_pred  = classification.predict(X_test_treated_df)\n",
+    "print(\"The first predictions on the TRAIN set are: \",y_train_pred[:5])\n",
+    "print(\"The first predictions on the TEST set are: \",y_test_pred[:5])\n"
    ]
   },
   {
