update with intro to logistic regression

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -1282,7 +1282,7 @@
    "metadata": {},
    "source": [
     "## 06 - Model Validation\n",
-    "### Evaluate the model with R2, RMSE, MAE, MSE scores "
+    "### Evaluate the linear regression model with R2, RMSE, MAE, MSE scores "
    ]
   },
   {
@@ -1356,6 +1356,45 @@
    "metadata": {},
    "source": [
     "The scoring that came from the different scalers were very similar, nothing conclusive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import confusion_matrix, accuracy_score, precision_score, recall_score, ConfusionMatrixDisplay\n",
+    "from sklearn.metrics import classification_report, f1_score, cohen_kappa_score\n",
+    "\n",
+    "cm_train = confusion_matrix(y_train, y_train_pred)\n",
+    "disp = ConfusionMatrixDisplay(cm_train,display_labels=classification.classes_);\n",
+    "disp.plot()\n",
+    "plt.show()\n",
+    "\n",
+    "cm_test = confusion_matrix(y_test, y_test_pred)\n",
+    "disp = ConfusionMatrixDisplay(cm_test,display_labels=classification.classes_);\n",
+    "disp.plot()\n",
+    "plt.show()\n",
+    "\n",
+    "# classification.score == accuracy of prediction\n",
+    "# Accuracy score = (TP + TN)/(TP + TN + FP + FN)\n",
+    "print(\"The accuracy in the TRAIN set is: {:.3f}\".format(accuracy_score(y_train, y_train_pred)))\n",
+    "print(\"The accuracy in the TEST  set is: {:.3f}\".format(accuracy_score(y_test, y_test_pred)))\n",
+    "\n",
+    "# Precission score. = TP/(TP + FP)\n",
+    "#If we're using labels instead of numbers for the classes to predict, we need to\n",
+    "# provide what class is the \"positive\" and which is the \"negative\"\n",
+    "print(\"The precission in the TRAIN set is: {:.3f}\".format(precision_score(y_train, y_train_pred, pos_label=\"A\")))\n",
+    "print(\"The precission in the TEST  set is: {:.3f}\".format(precision_score(y_test, y_test_pred, pos_label=\"A\")))\n",
+    "\n",
+    "# Recall score = TP / ( TP + FN)\n",
+    "print(\"The recall in the TRAIN set is: {:.3f}\".format(recall_score(y_train, y_train_pred, pos_label=\"A\")))\n",
+    "print(\"The recall in the TEST  set is: {:.3f}\".format(recall_score(y_test,  y_test_pred, pos_label=\"A\")))\n",
+    "\n",
+    "print(\"The F1-score for the TRAIN set is {:.2f}\".format(f1_score(y_train,y_train_pred, pos_label=\"A\")))\n",
+    "\n",
+    "print(classification_report(y_test, y_test_pred,target_names=['A','B']))"
    ]
   },
   {
